Added base and db

--- a/NoteApp/appsettings.json
+++ b/NoteApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost; database=noteapp; user=root; password=password"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
