Added user login and register'

--- a/NoteApp/appsettings.json
+++ b/NoteApp/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost; database=noteapp; user=root; password=password"
+    "DefaultConnection": "server=localhost; database=noteapp; user=root; password=password",
+    "NoteAppContextConnection": "Server=(localdb)\\mssqllocaldb;Database=NoteApp;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
