--- a/NoteApp/appsettings.json
+++ b/NoteApp/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost; database=noteapp; user=root; password=password",
-    "NoteAppContextConnection": "Server=(localdb)\\mssqllocaldb;Database=NoteApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "server=localhost; database=noteapp; user=root; password=password"
   },
   "Logging": {
     "LogLevel": {
